[tool.poetry]
name = "causal-modeling"
version = "0.1.0"
description = ""
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dowhy = "^0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
